; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemdisp/extr_locator.c_ISWbemSecurity_create.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemdisp/extr_locator.c_ISWbemSecurity_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.security = type { i32, %struct.TYPE_3__, i32, i32 }

@.str = private unnamed_addr constant [4 x i8] c"%p\0A\00", align 1
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@security_vtbl = common dso_local global i32 0, align 4
@wbemImpersonationLevelImpersonate = common dso_local global i32 0, align 4
@wbemAuthenticationLevelPktPrivacy = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"returning iface %p\0A\00", align 1
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__**)* @ISWbemSecurity_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ISWbemSecurity_create(%struct.TYPE_3__** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__**, align 8
  %4 = alloca %struct.security*, align 8
  store %struct.TYPE_3__** %0, %struct.TYPE_3__*** %3, align 8
  %5 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %6 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), %struct.TYPE_3__** %5)
  %7 = call %struct.security* @heap_alloc(i32 24)
  store %struct.security* %7, %struct.security** %4, align 8
  %8 = icmp ne %struct.security* %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %10, i32* %2, align 4
  br label %30

11:                                               ; preds = %1
  %12 = load %struct.security*, %struct.security** %4, align 8
  %13 = getelementptr inbounds %struct.security, %struct.security* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i32* @security_vtbl, i32** %14, align 8
  %15 = load %struct.security*, %struct.security** %4, align 8
  %16 = getelementptr inbounds %struct.security, %struct.security* %15, i32 0, i32 0
  store i32 1, i32* %16, align 8
  %17 = load i32, i32* @wbemImpersonationLevelImpersonate, align 4
  %18 = load %struct.security*, %struct.security** %4, align 8
  %19 = getelementptr inbounds %struct.security, %struct.security* %18, i32 0, i32 3
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @wbemAuthenticationLevelPktPrivacy, align 4
  %21 = load %struct.security*, %struct.security** %4, align 8
  %22 = getelementptr inbounds %struct.security, %struct.security* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 8
  %23 = load %struct.security*, %struct.security** %4, align 8
  %24 = getelementptr inbounds %struct.security, %struct.security* %23, i32 0, i32 1
  %25 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  store %struct.TYPE_3__* %24, %struct.TYPE_3__** %25, align 8
  %26 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %3, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %26, align 8
  %28 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_3__* %27)
  %29 = load i32, i32* @S_OK, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %11, %9
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @TRACE(i8*, ...) #1

declare dso_local %struct.security* @heap_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
